[package]
name = "turntouch"
version = "0.1.0"
edition = "2021"
description = "Turn Touch BLE remote control CLI"
license = "MIT"
readme = "README.md"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
uuid = "1"
toml = "1"
serde = { version = "1", features = ["derive"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-bluetooth = { version = "0.3", features = ["CBManager"] }
